--- a/css/style.css
+++ b/css/style.css
@@ -3698,6 +3698,13 @@ html.has-scroll-dragging {
   .container {
     padding: 0 30px;
   }
+  .showreel,
+  .expertise,
+  .projects__block,
+  .articles__block,
+  .footer__block {
+    padding: 30px 0;
+  }
   .showreel__container {
     max-width: 100%;
     padding: 0;
@@ -3918,6 +3925,13 @@ html.has-scroll-dragging {
   }
   .container {
     padding: 0 20px;
+  }
+  .showreel,
+  .expertise,
+  .projects__block,
+  .articles__block,
+  .footer__block {
+    padding: 20px 0;
   }
   .showreel__container {
     max-width: 100%;
