--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,14 @@ h4 {
   color: var(--text);
 }
 
+h6 {
+  font-family: var(--title-font);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 45px;
+  color: var(--text);
+}
+
 a,
 p,
 li,
@@ -823,7 +831,6 @@ html.has-scroll-dragging {
   transform: translate(-50%, -50%);
   -webkit-transition: .5s ease-in-out, opacity 0.1s linear;
   transition: .5s ease-in-out, opacity 0.1s linear;
-  cursor: none;
 }
 
 .header.hidden .header__burger {
@@ -1083,8 +1090,9 @@ html.has-scroll-dragging {
   left: 0;
   background: var(--bg);
   border-bottom: 1px solid var(--border);
-  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
-  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  opacity: 0;
+  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
+  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
   z-index: 99;
@@ -1092,8 +1100,9 @@ html.has-scroll-dragging {
 }
 
 .header__nav.active {
-  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
-  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
+  opacity: 1;
+  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
+  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
   -webkit-transform: translateY(0);
   transform: translateY(0);
 }
@@ -1120,7 +1129,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: flex;
   min-height: calc(var(--height) - 80px);
-  padding: 80px 0;
+  padding: 60px;
   flex-direction: column;
   justify-content: center;
   gap: 110px;
@@ -1131,6 +1140,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: flex;
   width: 100%;
+  position: relative;
 }
 
 .header__nav__contact {
@@ -1161,11 +1171,15 @@ html.has-scroll-dragging {
 }
 
 .header__nav_contact_item:not(:last-child) {
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 
 .header__nav_contact_item p {
   margin-bottom: 20px;
+}
+
+.header__nav_contact_link {
+  text-transform: uppercase;
 }
 
 .header__nav_link {
@@ -1184,14 +1198,11 @@ html.has-scroll-dragging {
   width: 180px;
   text-transform: uppercase;
   border: 1px solid var(--border);
+  text-align: center;
 }
 
-[data-clr-mode-active="light"] {
-  text-align: right;
-}
-
-[data-clr-mode-active="light"] [data-clr-mode="dark"],
-[data-clr-mode-active="dark"] [data-clr-mode="light"]  {
+[data-clr-mode-active="light"] .header__set_mode_btn[data-clr-mode="dark"],
+[data-clr-mode-active="dark"] .header__set_mode_btn[data-clr-mode="light"]  {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -1203,7 +1214,6 @@ html.has-scroll-dragging {
   transform: translateY(-50%);
   position: absolute;
   top: 50%;
-  display: none;
   width: 40px;
   height: 40px;
 }
@@ -1214,15 +1224,43 @@ html.has-scroll-dragging {
 }
 
 .header__set_mode_btn[data-clr-mode="dark"] {
-  left: -1px;
+  right: -1px;
+  left: calc(100% - 40px);
+  z-index: 0;
   background: var(--purple);
   color: #cfcfcf;
+  opacity: 0;
+  -webkit-transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+  transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
 }
 
 .header__set_mode_btn[data-clr-mode="light"] {
-  right: -1px;
+  right: 100%;
+  left: -1px;
+  z-index: 0;
   background: var(--orange);
   color: #fff;
+  opacity: 0;
+  -webkit-transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+  transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+}
+
+[data-clr-mode-active="light"] .header__set_mode_btn[data-clr-mode="dark"] {
+  right: 100%;
+  left: -1px;
+  z-index: 1;
+  opacity: 1;
+  -webkit-transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+  transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+}
+
+[data-clr-mode-active="dark"] .header__set_mode_btn[data-clr-mode="light"] {
+  right: -1px;
+  left: calc(100% - 40px);
+  z-index: 1;
+  opacity: 1;
+  -webkit-transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
+  transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
 }
 
 .header__set {
@@ -1299,25 +1337,27 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: calc(100% - 80px);
+  height: calc(var(--height) - 80px);
   flex-direction: column;
   position: fixed;
   top: 80px;
   left: 0;
   right: 0;
-  background-color: var(--bg);
   z-index: 100;
+  background-color: var(--bg);
+  opacity: 0;
   -webkit-transform: translateX(100%);
   transform: translateX(100%);
-  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
-  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s;
+  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
+  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
   overflow: hidden;
 }
 
 .header__consultation.active {
   visibility: visible;
-  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
-  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s;
+  opacity: 1;
+  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
+  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
   -webkit-transform: translateX(0%);
   transform: translateX(0%);
 }
@@ -1679,7 +1719,6 @@ html.has-scroll-dragging {
   border: none;
   background: var(--bg);
   border-radius: 50%;
-  cursor: none;
 }
 
 .header__consultation_burger svg {
@@ -2722,7 +2761,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 120px;
-  padding: 120px 0 240px 60px;
+  padding: 120px 0 0 60px;
   flex-direction: column;
   align-items: flex-start;
   gap: 60px 15px;
@@ -3523,6 +3562,10 @@ html.has-scroll-dragging {
     font-size: 49px;
     line-height: 61px;
   }
+  h6 {
+    font-size: 36px;
+    line-height: 45px;
+  }
   a,
   p,
   li,
@@ -3666,6 +3709,10 @@ html.has-scroll-dragging {
     font-size: 49px;
     line-height: 61px;
   }
+  h6 {
+    font-size: 36px;
+    line-height: 45px;
+  }
   a,
   p,
   li,
@@ -3697,6 +3744,22 @@ html.has-scroll-dragging {
   }
   .container {
     padding: 0 30px;
+  }
+  .header__nav_container {
+    padding: 30px;
+  }
+  .header__nav_flex {
+    justify-content: space-between;
+  }
+  .header__nav_list,
+  .header__nav__contact,
+  .header__set_block,
+  .header__set_language {
+    width: 50%;
+    padding: 0 30px;
+  }
+  .header__nav_bottom_social {
+    gap: 20px 40px;
   }
   .showreel,
   .expertise,
@@ -3874,6 +3937,37 @@ html.has-scroll-dragging {
 
 /* start 580px */
 @media (max-width: 1023px) {
+  .cursor {
+    display: none;
+  }
+  body {
+    cursor: auto;
+  }
+  button,
+  a,
+  .btn__input .button__text,
+  .button__close,
+  .c-scrollbar_thumb,
+  .has-scroll-dragging .c-scrollbar_thumb,
+  .header__select_selected_item,
+  .header__select_list_item,
+  #showreel__video,
+  .spec,
+  .spec__button,
+  .spec__button--big,
+  .spec .progress,
+  .minimal,
+  .minimal__button,
+  .minimal__button--big,
+  .minimal .progress,
+  .compact,
+  .compact__button,
+  .compact__button--big,
+  .compact .progress,
+  .articles__prev,
+  .articles__next {
+    cursor: pointer;
+  }
   h1 {
     font-size: 61px;
     line-height: 62px;
@@ -3894,6 +3988,10 @@ html.has-scroll-dragging {
     font-size: 29px;
     line-height: 36px;
   }
+  h6 {
+    font-size: 30px;
+    line-height: 45px;
+  }
   a,
   p,
   li,
@@ -3912,14 +4010,53 @@ html.has-scroll-dragging {
     font-size: 10px;
     line-height: 13px;
   }
+  .header,
+  .top {
+    height: 70px;
+  }
   .header__buttons {
     display: none;
   }
   .header__burger {
+    width: 36px;
+    height: 36px;
     left: auto;
     right: 22px;
     -webkit-transform: translate(0%, -50%);
     transform: translate(0%, -50%);
+  }
+  .header__burger span:nth-child(1),
+  .header__burger span:nth-child(2) {
+    bottom: 22px;
+  }
+  .header__burger span:nth-child(3),
+  .header__burger span:nth-child(4) {
+    bottom: 12px;
+  }
+  .header__burger.active span:nth-child(1) {
+    bottom: 22px;
+  }
+  .header__burger.active span:nth-child(2) {
+    bottom: 22px;
+  }
+  .header__burger.active span:nth-child(3) {
+    bottom: 11px;
+  }
+  .header__burger.active span:nth-child(4) {
+    bottom: 11px;
+  }
+  .header__nav,
+  .header__consultation {
+    height: calc(var(--height) - 70px);
+    top: 70px;
+  }
+  .header__nav_flex {
+    padding: 0 0 80px;
+  }
+  .header__nav_bottom_social {
+    position: absolute;
+    left: 30px;
+    bottom: 0;
   }
   .main__border {
     width: calc(100% - 40px);
@@ -3928,6 +4065,9 @@ html.has-scroll-dragging {
   }
   .container {
     padding: 0 20px;
+  }
+  .header__nav_container {
+    padding: 20px;
   }
   .showreel,
   .expertise,
@@ -4018,6 +4158,7 @@ html.has-scroll-dragging {
   }
   .footer__buttons {
     bottom: 60px;
+    gap: 20px;
   }
   .footer__social {
     position: absolute;
@@ -4056,6 +4197,10 @@ html.has-scroll-dragging {
     font-size: 29px;
     line-height: 36px;
   }
+  h6 {
+    font-size: 30px;
+    line-height: 45px;
+  }
   a,
   p,
   li,
@@ -4073,6 +4218,46 @@ html.has-scroll-dragging {
   .footer__privacy {
     font-size: 10px;
     line-height: 13px;
+  }
+  .header__nav_container {
+    gap: 40px;
+  }
+  .header__nav_flex {
+    padding: 0;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .header__nav_list,
+  .header__nav__contact {
+    width: 100%;
+  }
+  .header__nav__contact {
+    gap: 40px;
+  }
+  .header__nav_contact_item p,
+  .header__nav_contact_item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .header__nav_bottom_social {
+    position: relative;
+    left: auto;
+  }
+  .header__nav_list,
+  .header__nav__contact {
+    padding: 0 20px;
+  }
+  .header__set_language,
+  .header__set_language_control {
+    gap: 20px;
+  }
+  .header__set {
+    flex-direction: column-reverse;
+    gap: 40px;
+  }
+  .header__set_block,
+  .header__set_language {
+    width: 100%;
+    padding: 0 20px;
   }
   .digital__head {
     height: 66px;
