--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 :root {
   --inc-step: 1;
   --height: 100vh;
+  --scroll: 0;
   --x: 0px;
   --y: 0px;
   --title-font: 'Winston', sans-serif;
   --text-font: 'Rubik', sans-serif;
   --bg: #fff;
   --text: #161616;
+  --white: #fff;
   --text-gray: #6c6c6c;
   --gray-border: #d3d3d3;
   --border: #dfdfdf;
@@ -402,7 +404,7 @@ section {
   transform: translateY(-100%);
 }
 
-.text__rotate span{
+.text__rotate span {
   -webkit-transition-delay: calc(var(--inc-step)*0.03s);
   transition-delay: calc(var(--inc-step)*0.03s);
 }
@@ -483,8 +485,41 @@ section {
   position: relative;
   margin: auto;
   z-index: 1;
-  -webkit-transition: color 0.3s linear;
-  transition: color 0.3s linear;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.header.header__transparent .button__text {
+  color: var(--white);
+  -webkit-transition: color 0.2s linear 1.4s;
+  transition: color 0.2s linear 1.4s;
+}
+
+.header.active.header__transparent .btn .button__text,
+.header.active.header__transparent .btn .button__text,
+.header.active.header__transparent .button__text {
+  color: var(--text-gray);
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.header.active.header__transparent .btn:hover .button__text,
+.header.active.header__transparent .btn.active .button__text {
+  color: var(--white);
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.header.header__transparent .btn,
+.header.active.header__transparent .btn {
+  -webkit-transition: background-color 0.2s linear 1.4s;
+  transition: background-color 0.2s linear 1.4s;
+}
+
+.header.header__transparent .btn.active,
+.header.active.header__transparent .btn.active {
+  -webkit-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
 }
 
 .button__count {
@@ -789,7 +824,21 @@ html.has-scroll-dragging {
   width: 100%;
   border-bottom: 1px solid var(--border);
   background-color: var(--bg);
+  -webkit-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
   overflow: hidden;
+}
+
+.header.header__transparent {
+  background-color: transparent;
+  -webkit-transition: background-color 0.2s linear 1.4s;
+  transition: background-color 0.2s linear 1.4s;
+}
+
+.header.active.header__transparent {
+  background-color: var(--bg);
+  -webkit-transition: background-color 0.2s linear;
+  transition: background-color 0.2s linear;
 }
 
 .header__container {
@@ -861,13 +910,25 @@ html.has-scroll-dragging {
   position: absolute;
   height: 1px;
   width: 50%;
-  background: var(--text);
+  background-color: var(--text);
   opacity: 1;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out, background-color 0.2s linear;
+  transition: .25s ease-in-out, background-color 0.2s linear;
   overflow: hidden;
+}
+
+.header.header__transparent .header__burger span {
+  background-color: white;
+  -webkit-transition: .25s ease-in-out, background-color 0.2s linear 1.4s;
+  transition: .25s ease-in-out, background-color 0.2s linear 1.4s;
+}
+
+.header.active.header__transparent .header__burger span {
+  background-color: var(--text);
+  -webkit-transition: .25s ease-in-out, background-color 0.2s linear;
+  transition: .25s ease-in-out, background-color 0.2s linear;
 }
 
 .header__burger span:nth-child(even) {
@@ -925,6 +986,18 @@ html.has-scroll-dragging {
 .header__name {
   color: var(--text);
   opacity: 1;
+  -webkit-transition: color 0.2s linear, opacity 0.1s linear 0.3s;
+  transition: color 0.2s linear, opacity 0.1s linear 0.3s;
+}
+
+.header.header__transparent .header__name {
+  color: var(--white);
+  -webkit-transition: color 0.2s linear 1.4s, opacity 0.1s linear 0.3s;
+  transition: color 0.2s linear 1.4s, opacity 0.1s linear 0.3s;
+}
+
+.header.active.header__transparent .header__name {
+  color: var(--text);
   -webkit-transition: color 0.2s linear, opacity 0.1s linear 0.3s;
   transition: color 0.2s linear, opacity 0.1s linear 0.3s;
 }
@@ -1002,6 +1075,22 @@ html.has-scroll-dragging {
 .header__link:hover {
   text-transform: uppercase;
   color: var(--text-gray);
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+.header.header__transparent .header__link,
+.header.header__transparent .header__link:hover {
+  color: var(--white);
+  -webkit-transition: color 0.2s linear 1.4s;
+  transition: color 0.2s linear 1.4s;
+}
+
+.header.active.header__transparent .header__link,
+.header.active.header__transparent .header__link:hover {
+  color: var(--text-gray);
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear;
 }
 
 .icon__tg {
@@ -1044,7 +1133,7 @@ html.has-scroll-dragging {
   width: 100%;
   height: 50%;
   z-index: 1001;
-  background-color: #fff;
+  background-color: var(--white);
   -webkit-transition: top 0.3s linear;
   transition: top 0.3s linear;
 }
@@ -1055,7 +1144,7 @@ html.has-scroll-dragging {
   width: 100%;
   height: 50%;
   z-index: 1001;
-  background-color: #fff;
+  background-color: var(--white);
   -webkit-transition: top 0.3s linear;
   transition: top 0.3s linear;
 }
@@ -1109,15 +1198,15 @@ html.has-scroll-dragging {
 
 .header__nav {
   width: 100%;
-  height: calc(var(--height) - 80px);
+  height: calc(var(--height) - 81px);
   position: fixed;
-  top: 81px;
+  top: 0px;
   left: 0;
   background: var(--bg);
   border-bottom: 1px solid var(--border);
   opacity: 0;
-  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
-  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
+  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
+  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
   z-index: 99;
@@ -1125,9 +1214,10 @@ html.has-scroll-dragging {
 }
 
 .header__nav.active {
+  top: 80px;
   opacity: 1;
-  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
-  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
+  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s, opacity 0s linear 0s, top 0s linear 0.2s;
+  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0.2s linear 0s, top 0s linear 0.2s;
   -webkit-transform: translateY(0);
   transform: translateY(0);
 }
@@ -1264,7 +1354,7 @@ html.has-scroll-dragging {
   left: -1px;
   z-index: 0;
   background: var(--orange);
-  color: #fff;
+  color: var(--white);
   opacity: 0;
   -webkit-transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
   transition: left 0.2s linear, right 0.2s linear, opacity 0.2s linear 0.3s;
@@ -1362,10 +1452,10 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: calc(var(--height) - 80px);
+  height: calc(var(--height) - 81px);
   flex-direction: column;
   position: fixed;
-  top: 81px;
+  top: 0px;
   left: 0;
   right: 0;
   z-index: 100;
@@ -1373,16 +1463,16 @@ html.has-scroll-dragging {
   opacity: 0;
   -webkit-transform: translateX(100%);
   transform: translateX(100%);
-  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
-  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s;
+  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
+  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
   overflow: hidden;
 }
 
 .header__consultation.active {
-  visibility: visible;
+  top: 80px;
   opacity: 1;
-  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
-  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0s linear 0s;
+  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s, opacity 0s linear 0s, top 0s linear 0.2s;
+  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0.2s linear 0s, top 0s linear 0.2s;
   -webkit-transform: translateX(0%);
   transform: translateX(0%);
 }
@@ -1742,7 +1832,6 @@ html.has-scroll-dragging {
   height: 24px;
   padding: 20px;
   border: none;
-  background: var(--bg);
   border-radius: 50%;
 }
 
@@ -2021,7 +2110,7 @@ html.has-scroll-dragging {
 .showreel__modal .button__close:hover,
 .hide.showreel__modal .button__close:hover {
   mix-blend-mode: hard-light;
-  border: 1px solid #fff;
+  border: 1px solid var(--white);
 }
 
 .showreel__modal_close {
@@ -2051,7 +2140,7 @@ html.has-scroll-dragging {
 .dark .showreel__modal_close:hover svg {
   width: 30px;
   height: 30px;
-  color: #fff;
+  color: var(--white);
 }
 
 .showreel__modal_visible {
@@ -2294,7 +2383,7 @@ html.has-scroll-dragging {
 .spec__button.toggle:hover,
 .spec__button.volume:hover,
 .spec__button.fullscreen:hover {
-  border: 1px solid #fff;
+  border: 1px solid var(--white);
 }
 
 .spec__button i {
@@ -2392,7 +2481,7 @@ html.has-scroll-dragging {
   -ms-flex-pack: center;
   justify-content: center;
   pointer-events: none;
-  background: #fff;
+  background: var(--white);
   z-index: 2;
 }
 
@@ -2408,7 +2497,7 @@ html.has-scroll-dragging {
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  color: #fff;
+  color: var(--white);
   z-index: -1;
 }
 
@@ -2416,7 +2505,7 @@ html.has-scroll-dragging {
   position: relative;
   -webkit-transform: translateY(-30px);
   transform: translateY(-30px);
-  color: #fff;
+  color: var(--white);
   z-index: -1;
 }
 
@@ -2426,7 +2515,7 @@ html.has-scroll-dragging {
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  color: #fff;
+  color: var(--white);
   z-index: -1;
 }
 
@@ -3495,6 +3584,15 @@ html.has-scroll-dragging {
 
 /* end projects */
 
+/* start project */
+
+.project_top {
+  height: var(--height);
+  max-height: 1000px;
+}
+
+/* end project */
+
 /* start articles */
 
 .articles__container {
@@ -3738,7 +3836,7 @@ html.has-scroll-dragging {
   width: 90px;
   height: 30px;
   background: var(--purple);
-  color: #fff;
+  color: var(--white);
   text-transform: uppercase;
   clip-path: polygon(100% 0, 100% calc(100% - 11px), calc(100% - 8px) 100%, 0 100%, 0 0);
 }
@@ -4298,8 +4396,11 @@ html.has-scroll-dragging {
   }
   .header__nav,
   .header__consultation {
-    height: calc(var(--height) - 70px);
-    top: 71px;
+    height: calc(var(--height) - 71px);
+  }
+  .header__nav.active,
+  .header__consultation.active {
+    top: 70px;
   }
   .header__nav_flex {
     padding: 0 0 80px;
