--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   --bg: #fff;
   --text: #161616;
   --white: #fff;
+  --black: #000;
   --text-gray: #6c6c6c;
   --gray-border: #d3d3d3;
   --border: #dfdfdf;
@@ -3588,7 +3589,51 @@ html.has-scroll-dragging {
 
 .project_top {
   height: var(--height);
-  max-height: 1000px;
+  min-height: 1024px;
+  max-height: 1024px;
+}
+
+.project_top__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 250px 0 110px;
+  gap: 80px;
+}
+
+.project_top__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: calc(40% - 80px);
+  flex-direction: column;
+  gap: 20px;
+}
+
+.project_top__image {
+  width: 60%;
+  height: 720px;
+}
+
+.project_top__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.project_top__desc,
+.project_top__head {
+  color: var(--white);
+}
+
+.project_top__black .project_top__desc,
+.project_top__black .project_top__head {
+  color: var(--black);
+}
+
+.project_top__bg .project_top__desc,
+.project_top__bg .project_top__head {
+  color: var(--text);
 }
 
 /* end project */
