--- a/css/style.css
+++ b/css/style.css
@@ -3596,7 +3596,7 @@ html.has-scroll-dragging {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 250px 0 110px;
+  padding: 180px 0 100px;
   gap: 80px;
 }
 
@@ -3605,6 +3605,7 @@ html.has-scroll-dragging {
   display: -ms-flexbox;
   display: flex;
   width: calc(40% - 80px);
+  padding: 60px 0 0;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
@@ -3650,8 +3651,8 @@ html.has-scroll-dragging {
 
 .project_top__image {
   width: 60%;
-  height: calc(var(--height) - 360px);
-  max-height: 664px;
+  height: calc(var(--height) - 280px);
+  max-height: 720px;
 }
 
 .project_top__image img {
